Sync chapter7 with local workspace