@@ -1,4 +1,4 @@
-package me.scpark.springdeveloper;
+package me.scpark.springdeveloper.controller;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
 import me.scpark.springdeveloper.dao.Article;
@@ -24,7 +24,7 @@ import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.
 
 @SpringBootTest
 @AutoConfigureMockMvc
-class BlogApiControllerTest {
+public class BlogControllerTest {
     @Autowired
     protected MockMvc mockMvc;
 
@@ -39,63 +39,82 @@ class BlogApiControllerTest {
         blogRepository.deleteAll();
     }
 
-
-    @DisplayName("addArticle: creates an article")
+    @DisplayName("addArticle:블로그 글 추가에 성공한다")
     @Test
-    void addArticle() throws Exception {
-        final String url = "/api/articles";
-        final String title = "title";
-        final String content = "content";
-        final AddArticleRequest article = new AddArticleRequest(title, content);
+    public void addArticle() throws Exception{
+        //given
+        final String url="/api/articles";
+        final String title="테스트";
+        final String content="블로그 글 첫 번째 입니다";
+        final AddArticleRequest article = new AddArticleRequest(title,content);
         final String requestBody = objectMapper.writeValueAsString(article);
 
-        ResultActions result = mockMvc.perform(post(url)
+        //when
+        ResultActions result =  mockMvc.perform(post(url)
                 .contentType(MediaType.APPLICATION_JSON_VALUE)
                 .content(requestBody));
-
+        //then
         result.andExpect(status().isCreated());
-
-        List<Article> articles = blogRepository.findAll();
-        assertThat(articles).hasSize(1);
-        assertThat(articles.getFirst().getTitle()).isEqualTo(title);
-        assertThat(articles.getFirst().getContent()).isEqualTo(content);
+        List<Article> articles= blogRepository.findAll();
+        assertThat(articles.size()).isEqualTo(1);
+        assertThat(articles.get(0).getTitle()).isEqualTo(title);
+        assertThat(articles.get(0).getContent()).isEqualTo(content);
     }
 
-    @DisplayName("findAllArticles: returns article list")
+    @DisplayName("findAllArticles:블로글 글 목록 조회에 선공한다")
     @Test
-    void findAllArticles() throws Exception {
-        final String url = "/api/articles";
+    public void findAllArticles() throws Exception{
+        //given
+//     blogRepository.save(new Article("title","content"));
         blogRepository.save(Article.builder().title("title").content("content").build());
 
-        ResultActions resultActions = mockMvc.perform(get(url)
-                .accept(MediaType.APPLICATION_JSON_VALUE));
+        //when
+        final String url ="/api/articles";
+        final ResultActions resultActions = mockMvc.perform(get(url).accept(MediaType.APPLICATION_JSON));
 
+        //then
         resultActions.andExpect(status().isOk())
                 .andExpect(jsonPath("$[0].content").value("content"))
                 .andExpect(jsonPath("$[0].title").value("title"));
     }
-    @DisplayName("findArticle: 블로그 글 조회에 성공한다.")
+
+    @DisplayName("findArticle: 블로그 글 조회에 성공.")
     @Test
-    public void findArticle() throws Exception {
+    public void findArticle() throws Exception{
+        //given(데이터 분비)
         final String url = "/api/articles/{id}";
-        final String title = "불로그 제목";
-        final String content = "불로그 내용";
+        final String title = "블로그 제목";
+        final String content = "블로그 내용";
 
         Article savedArticle = blogRepository.save(Article.builder().title(title).content(content).build());
 
-        final ResultActions resultActions = mockMvc.perform(get(url, savedArticle.getId()));
+        //when(실행: 위헤서 생성된 블로그글을 조회)
+        final ResultActions resultActions = mockMvc.perform(get(url,savedArticle.getId()));
 
+        //then
         resultActions.andExpect(status().isOk())
-                .andExpect(jsonPath("$.title").value(title))
+                .andExpect(jsonPath("&.title").value(title))
                 .andExpect(jsonPath("$.content").value(content));
-
-
-
-
-
-
-
-
-
     }
 }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
